$Id$

Latest changes:

=== devel ===

- Build system:
  * binutils:
    + add support for binutils-2.24.x/2.25.x/2.26.x
  * kconfig 3.11-rc3
  * kernel-/target-toolchain:
    + update gcc-4.7.x version to 4.7.4
    + add support for gcc-4.8.x/4.9.x/5.x
  * support for a 3rd (auxiliary) firmware
  * fakeroot: bump version to 1.22
  * lzma SDK: bump lzma SDK version to 4.65
  * sfk: bump version to 1.8.8
  * squashfs* tools:
    + unify all host- and target-patches (i.e. use the same set of patches for both the host and the target packages)
    + switch to using a C only version of liblzma instead of the C++ version used so far
  * squashfs3 tools: revise LZMA related patches so that the resulting binaries support
                     both ZLIB and LZMA compression methods at the same time
  * tar: bump version to 1.29

- New tools and hooks:
  * fwdu: script to download (and unpack) all firmwares from ftp.avm.de
  * verify-dls.sh: script to validate download urls in Config.in
  * scons: python based software construction tool (s. http://www.scons.org/ for details)
  * genext2fs: a tool to generate an ext2 filesystem as a normal (non-root) user
  * mke2img: a script taken from the Buildroot project making it possible to create
             an ext2 filesystem image as a normal (non-root) user
  * squashfs-tools-4.3: a special version of squashfs-tools modified to support AVM-BE format

- New patches (read online help for more info):

- New packages, libs, modules:
    * asterisk 11.25.3
    * asterisk-chan-capi post-1.1.6 with asterisk11 adjustments by Mihai Moldovan
    * asterisk-chan-dongle 1.1-git (asterisk11 branch)
    * asterisk-chan-sccp 4.1.0RC1
    * asterisk-gui 2.1.0RC1
    * atop 2.2.3
    * autossh 1.4e
    * avm-forwarding 0.0.1
    * axTLS wrapper 1.4.9
    * bvi 1.4.0
    * cntlm 0.93beta5
    * decrypt FRITZ!OS configs v0.2 (renamed version of PeterPawn's script decode_passwords)
    * ISC dhcp 4.3.3-P1
    * E-MailRelay 1.9
    * gptfdisk 1.0.1