@@ -13,6 +13,7 @@ config FREETZ_TARGET_ARCH_LE
 		FREETZ_TYPE_5050 || \
 		FREETZ_TYPE_5124 || \
 		FREETZ_TYPE_5140 || \
+		FREETZ_TYPE_6490 || \
 		FREETZ_TYPE_WLAN || \
 		FREETZ_TYPE_7050 || \
 		FREETZ_TYPE_7112 || \
@@ -64,15 +65,25 @@ config FREETZ_TARGET_ARCH_BE
 config FREETZ_TARGET_ARCH_MIPS
 	bool
 	default y
+	depends on \
+		! FREETZ_TYPE_6490
+
+config FREETZ_TARGET_ARCH_X86
+	bool
+	default y
+	depends on \
+		FREETZ_TYPE_6490
 
 config FREETZ_TARGET_ARCH
 	string
 	default "mips"   if FREETZ_TARGET_ARCH_MIPS
+	default "x86"    if FREETZ_TARGET_ARCH_X86
 
 config FREETZ_TARGET_ARCH_ENDIANNESS_DEPENDENT
 	string
 	default "mips"   if FREETZ_TARGET_ARCH_MIPS && FREETZ_TARGET_ARCH_BE
 	default "mipsel" if FREETZ_TARGET_ARCH_MIPS && FREETZ_TARGET_ARCH_LE
+	default "i686"   if FREETZ_TARGET_ARCH_X86
 
 config FREETZ_TARGET_CROSS
 	string
