@@ -6,11 +6,13 @@ config FREETZ_GCC_ARCH
 	string
 	default "mips32"   if FREETZ_TARGET_ARCH_MIPS && FREETZ_TARGET_ARCH_LE
 	default "mips32r2" if FREETZ_TARGET_ARCH_MIPS && FREETZ_TARGET_ARCH_BE
+	default "atom"     if FREETZ_TARGET_ARCH_X86
 
 config FREETZ_GCC_TUNE
 	string
 	default "4kc"      if FREETZ_TARGET_ARCH_MIPS && FREETZ_TARGET_ARCH_LE
 	default "24kc"     if FREETZ_TARGET_ARCH_MIPS && FREETZ_TARGET_ARCH_BE
+	default "atom"     if FREETZ_TARGET_ARCH_X86
 
 config FREETZ_GCC_FLOAT_ABI
 	string
