@@ -11,6 +11,7 @@ Latest changes:
   * kernel-/target-toolchain:
     + update gcc-4.7.x version to 4.7.4
     + add support for gcc-4.8.x/4.9.x/5.x
+    + add support for x86 target
   * support for a 3rd (auxiliary) firmware
   * fakeroot: bump version to 1.22
   * lzma SDK: bump lzma SDK version to 4.65
